<resources>
    <string name="app_name">InmobiliApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Inmobiliaria">Inmobiliaria</string>
    <string name="Perfil">Perfil</string>
    <string name="Inmuebles">Inmuebles</string>
    <string name="ver_detalles">Detalles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Detalle">Detalle</string>
    <string name="Agregar_Nuevo_Inmueble">Agregar Nuevo Inmueble</string>
    <string name="Contratos">Contratos</string>
    <string name="Agregar_Inmueble">Agregar Inmueble</string>
    <string name="Inqulinos">Inquilinos</string>
    <string name="Pagos">Listado de Pagos</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="action_password">Cambiar Contraseña</string>
</resources>