<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ubicacion"
            android:title="@string/Inmobiliaria" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_Inmuebles"
            android:icon="@drawable/propiedades"
            android:title="@string/Inmuebles" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/contrato"
            android:title="@string/Contratos" />
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/inversion"
            android:title="@string/Pagos" />
    </group>
</menu>